<resources>
    <string name="app_name">Shake N\' Generate</string>
    <string name="generateNumber">Generate random number</string>
    <string name="generateBetween">Generate a random number between</string>
    <string name="and">and</string>
    <string name="specifyRange">Please specify the range</string>
    <string name="outOfBounds">Number out of bounds</string>
    <string name="listTooLarge">Max list size: 999</string>
    <string name="nbTooLarge">Number too large. Max value: 9 999 999</string>
    <string name="nbTooSmall">Number too small. Min value: -9 999 999</string>
    <string name="infoText">Shake your device or press the button to generate a random number within your desired range.</string>
    <string name="action_info">Info</string>
    <string name="action_more">More</string>
    <string name="about">About</string>
    <string name="developer">Developer: Caius Florea</string>
    <string name="version">App version:</string>
    <string name="contact">Contact: caiusf94@yahoo.com</string>
    <string name="copyright">Copyright \u00A9 2017 Shake N\' Generate</string>
    <string name="generateMoreNumbersTitle">List of random numbers</string>
    <string name="generateMoreNumbersMessage">How many random numbers would you like to generate?</string>
    <string name="enterNumber">Please enter a number</string>
    <string name="invalidNumber">Invalid number</string>
    <string name="listInfoText">Tap and hold a number to replace it with another random number within the range.\n\nShake your device to generate a list of random numbers within your desired range.</string>
    <string name="atLeastOneElement">List must have at least 1 element</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="shakeDevice">Shake your device!</string>
    <string name="shakeAgain">Shake again to generate another number!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="shakeToGenerateOtherList">Shake your device to generate a list of other numbers</string>
    <string name="generatedOne">Generated </string>
    <string name="generatedMultiple">Generated </string>
    <string name="numberBetween"> number between </string>
    <string name="numbersBetween"> numbers between </string>
    <string name="uniqueNumbersBetween">unique numbers between</string>
    <string name="visitFBprofile">Visit my Facebook profile!</string>
    <string name="dontRepeat">Don\'t repeat numbers</string>
    <string name="onlyOne">There is only</string>
    <string name="uniqueNumberBetween">unique number between</string>
    <string name="language">Change language</string>
    <string name="selectLanguage">Select language</string>
    <string name="ro">Romanian</string>
    <string name="en">English</string>
    <string name="de">German</string>
    <string name="fr">French</string>
    <string name="lastVerb"> </string>
    <string name="fullList">Cannot replace number. All distinct numbers have been generated.</string>
    <string name="onlyMultiple">There are only</string>

</resources>
