<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="always" >
        <menu>
            <item android:id="@+id/action_about"
                android:title="@string/about"
                app:showAsAction="always"
                />
            <item android:id="@+id/action_language"
                android:title="@string/language"
                app:showAsAction="always"
                />
        </menu>
    </item>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline_white_48dp"
        android:title="@string/action_info"
        app:showAsAction="ifRoom"/>

</menu>