<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/developer"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="22dp"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/appVersion"
            android:layout_height="81dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="22dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/contact"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorLightGrey"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/visitFbProfileIcon"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1.19"
            android:src="@drawable/fb" />

        <TextView
            android:id="@+id/visitFbProfileText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/visitFBprofile"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/copyright"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_weight="0.21" />
</LinearLayout>